Added why me file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -102,6 +102,7 @@ website:
         contents:
         - about_me/experience.qmd
         - about_me/project_portfolio.qmd   
+        - about_me/why_me.qmd
             
 format:
   html:
