--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ website:
         - 3D_deep_learning/03_rendering.qmd
         - 3D_deep_learning/04_fitting_deformable_mesh_to_point.qmd
         - 3D_deep_learning/05_differentiable_rendering.qmd
+        - 3D_deep_learning/06_nerf.qmd
         - 3D_deep_learning/resources.qmd
       - section: "**Interpretable_ml**"
         contents:
