added text preprocessing

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -83,6 +83,7 @@ website:
         - computer_vision/summary_of_research_papers/oneFormer.qmd
       - section: "**NLP**"
         contents: 
+        - nlp/text_preprocessing.qmd
         - nlp/IE.qmd
         - nlp/rnn.qmd
         - nlp/starspace.qmd
