--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,7 @@ website:
           - transformers/attention_is_all_you_need.qmd
           - transformers/attention.qmd
           - transformers/transformers.qmd
+          - transformers/BERT.qmd
           - transformers/transformers_from_scratch.qmd
           - transformers/image_worth_16_16.qmd
           - transformers/vision_transformer.qmd
