added notes to gradient boosting

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ website:
           - ml_algorithms/adaboost.qmd
           - ml_algorithms/logitboost.qmd
           - ml_algorithms/gradient_boosting.qmd
+          - ml_algorithms/lightGBM.qmd
         - section: "**Data Architecture**"
           contents:
           - data_architecture/big_data_architectures.qmd
