--- a/_quarto.yml
+++ b/_quarto.yml
@@ -105,6 +105,7 @@ website:
         - section: "**Computer Vision**"
           contents: 
           - computer_vision/image_classification/01_convolution.qmd
+          - computer_vision/cnn_architectures/architectures.qmd
           - computer_vision/object_detection/introduction.qmd
           - computer_vision/object_detection/yolo.qmd
           - computer_vision/image_classification/satellite_images_classification.ipynb      
