added additional notes for segmentation from stanford lectures

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -110,6 +110,7 @@ website:
           - computer_vision/object_detection/yolo.qmd
           - computer_vision/image_classification/satellite_images_classification.ipynb      
           - computer_vision/image_segmentation/01_intro.qmd   
+          - computer_vision/image_segmentation/03_intro_2.qmd
           - computer_vision/image_segmentation/02_architectures.qmd
           - computer_vision/summary_of_research_papers/oneFormer.qmd
         - section: "**NLP**"
