--- a/_quarto.yml
+++ b/_quarto.yml
@@ -198,6 +198,10 @@ website:
           - pytorch/01_introduction.ipynb
           - pytorch/02_continous_xor.ipynb
           - pytorch/03_activation_functions.ipynb
+        - section: "**Python**"
+          contents:
+          - python/01_intro_to_dictionary.ipynb
+          - python/02_dict_iteration.ipynb
         - section: "**DSA**"
           contents: 
           - dsa/insertion_sort.ipynb
