--- a/_quarto.yml
+++ b/_quarto.yml
@@ -116,6 +116,7 @@ website:
           contents: 
           - computer_vision/image_classification/01_convolution.qmd
           - computer_vision/cnn_architectures/architectures.qmd
+          - computer_vision/cnn_architectures/dl_architectures.qmd
           - computer_vision/object_detection/introduction_part1.qmd
           - computer_vision/object_detection/introduction_part2.qmd
           - computer_vision/object_detection/anchor_boxes.qmd
@@ -202,6 +203,7 @@ website:
           - pytorch/01_introduction.ipynb
           - pytorch/02_continous_xor.ipynb
           - pytorch/03_activation_functions.ipynb
+          - pytorch/05_pytorch_lightening.ipynb
         - section: "**Python**"
           contents:
           - python/dictionary/01_intro_to_dictionary.ipynb
