wrote notes on pca

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -198,6 +198,9 @@ website:
           - data_quality/setup_datasource.ipynb
           - data_quality/generate_expectation.ipynb
           - data_quality/run_checkpoint.ipynb
+        - section: "**Unsupervised Learning**"
+          conents:
+          - 01_pca.qmd
         - section: "**Data Privacy**"
           contents: 
           - data_privacy/basic_privacy_approaches.qmd
