--- a/_quarto.yml
+++ b/_quarto.yml
@@ -250,6 +250,7 @@ website:
           contents:
           - pyspark/00_spark_installation.qmd 
           - pyspark/01_dataframe_api.ipynb   
+          - pyspark/02_pandas_on_spark.ipynb
         - section: "**Why Me**"
           contents:                 
           - about_me/why_me.qmd          
